DevOps/21_Projects/capstone_rag_backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rag-backend
  labels:
    app: rag-backend
spec:
  type: ClusterIP
  selector:
    app: rag-backend
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
